basicWordle/style.css
* {
    color: #ffffff;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
}

body {
    background-color: #121213;
}

.game-container {
    height: 90vh; 
    display: flex; 
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.title-container {
    text-align: center;
    width: 510px;
    border-bottom: solid 1px #3a3a3c;
}

.tile-container {
    width: 330px;
    margin: 30px;
}

.key-container {
    width: 510px;
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;

}

.key-container button {
    width: 43px;
    height: 58px;
    border-radius: 4px;
    border: none;
    background-color: #818384;
    color: #ffffff;
    font-weight: bold;
    margin: 3px;
    cursor: pointer;
    user-select: none;
}

.key-container button:nth-child(11) {
    margin-left: 30px;
}

.key-container button:nth-child(20),
.key-container button:nth-child(28) {
    width: 68px;
}

.tile-container div {
    display: flex; /* columns next to each other instead of stacked */
}

.tile-container .tile {
    width: 62px;
    height: 62px;
    border: 2px solid #3a3a3c;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;
    font-weight: bold;
    margin: 2px;
}

.tile.flip {
    animation: 0.5s linear flipping;
}

@keyframes flipping {
    0% {
        transform: rotateX(90deg);
    }
    50% {
        transform: rotateX(90deg);
    }
    100% {
        transform: rotateX(0deg);
    }
}
.grey-overlay {
    background-color: #3a3a3c;
    border: none;
}

.yellow-overlay {
    background-color: #b59f3a;
    border: none;
}

.green-overlay {
    background-color: #538d4e;
    border: none;
}

.message-container {
    height: 30px;
    z-index: 1;
    justify-content: center;
    align-items: center;
}

.message-container button {
    width: 50px;
    height: 20px;
    border-radius: 4px;
    border: none;
    background-color: #565657;
    color: #ffffff;
    margin: 10px;
    cursor: pointer;
    user-select: none;
    margin-left: 400px;
    position: absolute;
    top: 2rem;
    right: 2rem;
    width: 50px;
    height: 20px;
}

.message-container p {
    background-color: rgba(129, 131, 132, 0.7);
    border-radius: 10px;
    padding: 8px;
    width: fit-content;
    float: center;
    margin: auto;
}

